--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -90,13 +90,13 @@
            </td>
            <td>
             <div class="control-group">
-              <label class="control-label">{{'label.address1' | translate}}<span class="required">*</span></label>
+              <label class="control-label">{{'label.address1' | translate}}</label>
               <div class="controls">
                 <input type="text" id="addressNo" ng-model="formData.addressNo"/>
               </div>
             </div>
             <div class="control-group">
-              <label class="control-label">{{'label.street' | translate}}</label>
+              <label class="control-label">{{'label.street' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="street" ng-model="formData.street"/>
               </div>
