--- a/app/views/clients/viewfinancialtransaction.html
+++ b/app/views/clients/viewfinancialtransaction.html
@@ -28,7 +28,7 @@
 		<ul class="breadcrumb">
 			<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
 			<li><a href="#/viewclient/{{clientId}}">{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
-			<li class="active">{{'label.creatticket' | translate}}</li>
+			<li class="active">{{'label.invoicedetails' | translate}}</li>
 		</ul>
 	</div>
 <div class="row-fluid">
