--- a/app/styles/jquery-ui.css
+++ b/app/styles/jquery-ui.css
@@ -534,7 +534,7 @@ button.ui-button::-moz-focus-inner {
 	overflow: hidden;
 }
 .ui-progressbar .ui-progressbar-value {
-	margin: -1px;
+	margin: -0.25px;
 	height: 100%;
 }
 .ui-progressbar .ui-progressbar-overlay {
@@ -1193,3 +1193,22 @@ body .ui-tooltip {
 	filter: Alpha(Opacity=30)/*{opacityFilterShadow}*/;
 	border-radius: 8px/*{cornerRadiusShadow}*/;
 }
+.ui-corner-left-progress{
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+.ui-corner-all-progress{
+	border-top-right-radius: 40px;
+	border-bottom-right-radius: 40px;
+	border-top-left-radius: 40px;
+	border-bottom-left-radius: 40px;
+	margin-left: -20px;
+}
+.ui-corner-all-progressfirst{
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	border-top-right-radius: 40px;
+	border-bottom-right-radius: 40px;
+	margin-left: -20px;
+
+	}
