--- a/app/views/clients/createclient1.html
+++ b/app/views/clients/createclient1.html
@@ -1,5 +1,5 @@
 
-<form name="createclientform" novalidate="" class="form-horizontal1 well"  ng-submit="submit1()">
+<form name="createclientform" novalidate="" class="form-horizontal well"  ng-submit="submit1()">
        
         <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.error' | translate}}</label>
@@ -8,25 +8,25 @@
 	</div>
      
         <fieldset>
-          
+          <legend>Create client</legend>
           <legend>{{configs.enabled}}</legend>
         <table>
            <tr>
-             <td  width="60%">
+             <td>
           
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label">{{'label.office' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <select ng-model="formData1.officeId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}" ng-change="changeOffice(formData1.officeId)"></select>
               </div>
             </div>
-             <div class="control-group1">
+             <div class="control-group">
               <label class="control-label">{{'label.clientcategeory' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <select ng-model="formData1.clientCategory"  ng-options="clientCategoryData.id as clientCategoryData.categoryType for clientCategoryData in clientCategoryDatas" value="{{clientCategoryDatas.id}}"></select>
               </div>
             </div>
-  		      <div class="control-group1">
+  		      <div class="control-group">
               <label class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="firstname" name="firstname" ng-model="formData1.firstname" required ng-minlength=3 late-Validate/>
@@ -38,13 +38,13 @@
                 </span>
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label" for="middlename">{{'label.middlename' | translate}}</label>
               <div class="controls">
                 <input type="text" id="middlename" ng-model="formData1.middlename"/>
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label></label>
               <div class="controls">
                 <input type="text" id="lastname" name="lastname" ng-model="formData1.lastname" required ng-minlength=3 late-Validate/>
@@ -56,7 +56,7 @@
                 </span>
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label" for="phone">{{'label.phone' | translate}}</label>
               <div class="controls">
                 <input type="text" id="phone" ng-model="formData1.phone" ng-pattern="/^(?!0+$)\d{1,19}$/"  ng-maxlength="10" name="phone"/>
@@ -68,61 +68,61 @@
            </div>
               </div>
             </div>
-             <div class="control-group1">
+             <div class="control-group">
               <label class="control-label" for="email">{{'label.email' | translate}}</label>
               <div class="controls">
                 <input type="text" id="email" ng-model="formData1.email"/>
               </div>
             </div>
             
-            <div class="control-group1" ng-hide="configurationProperty==false">
+            <div class="control-group" ng-hide="configurationProperty.enabled==false">
               <label class="control-label">Login<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="login" name="login" ng-model="formData1.login"/>
               </div>
             </div>
             
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label" for="file">{{'label.client.select.image' | translate}}</label>
               <div class="controls">
                 <input type="file" ng-file-select="onFileSelect($files)">
               </div>
             </div>
            </td>
-           <td width="50%">
-            <div class="control-group1">
+           <td>
+            <div class="control-group">
               <label class="control-label">{{'label.address1' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="addressNo" ng-model="formData1.addressNo"/>
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label">{{'label.street' | translate}}</label>
               <div class="controls">
                 <input type="text" id="street" ng-model="formData1.street"/>
               </div>
             </div>
-  		      <div class="control-group1">
+  		      <div class="control-group">
               <label class="control-label" for="city">{{'label.city' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="city" name="city" ng-model="formData1.city" list ="citylist" ng-change="getStateAndCountry(formData1.city)" required />
                
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label" for="state">{{'label.state' | translate}}</label>
               <div class="controls">
                 <input type="text" id="state" ng-model="formData1.state"/>
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label" for="country">{{'label.country' | translate}}<span class="required">*</span></label></label>
               <div class="controls">
                 <input type="text" id="country" name="country" ng-model="formData1.country" required/>
               
               </div>
             </div>
-            <div class="control-group1">
+            <div class="control-group">
               <label class="control-label">{{'label.zipcode' | translate}}</label>
               <div class="controls">
                 <input type="text" id="zipCode" ng-model="formData1.zipCode"/>
@@ -133,7 +133,7 @@
                    <option  data-ng-repeat="city in cities" value="{{city}}">
              </datalist>
              
-             <div class="control-group1" ng-hide="configurationProperty==false">
+             <div class="control-group" ng-hide="configurationProperty.enabled==false">
               <label class="control-label">Password<span class="required">*</span></label>
               <div class="controls">
                 <input type="password"  ng-model="formData1.password"/>
@@ -143,7 +143,7 @@
            </tr>
            </table> 
            
-            <!-- <button type="submit" ng-model="formvalue" value="!createclientform.$valid" ng-hide="true">Save</button> -->
+            
         </fieldset>
          <div class="jw-footer ui-widget-header ui-corner-bottom">
               <div class="jw-buttons ui-helper-clearfix">
