--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -28,8 +28,9 @@
   		      <div class="control-group">
               <label class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
               <div class="controls">
-                <input type="text" id="firstname" name="firstname" ng-model="formData.firstname" required ng-minlength=3 late-Validate/>
+                <input type="text" id="firstname" name="firstname" ng-model="formData.firstname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 <span  ng-show="createclientform.firstname.$invalid">
+                	<small class="error" ng-show="createclientform.firstname.$error.pattern">alphanumeric and spaces only!</small>
                     <small class="error" ng-show="createclientform.firstname.$error.req">
                         Required Field
                     </small>
@@ -46,8 +47,9 @@
             <div class="control-group">
               <label class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label></label>
               <div class="controls">
-                <input type="text" id="lastname" name="lastname" ng-model="formData.lastname" required ng-minlength=3 late-Validate/>
+                <input type="text" id="lastname" name="lastname" ng-model="formData.lastname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 <span  ng-show="createclientform.lastname.$invalid">
+                	<small class="error" ng-show="createclientform.lastname.$error.pattern">alphanumeric and spaces only!</small>
                     <small class="error" ng-show="createclientform.lastname.$error.req">
                         Required Field
                     </small>
