--- a/app/views/clients/editclient.html
+++ b/app/views/clients/editclient.html
@@ -72,8 +72,9 @@
                 <div class="control-group">
                   <label class="control-label">{{ 'label.firstname' | translate }}<span class="required">*</span></label>
                   <div class="controls">
-                    <input type="text" name="firstname" ng-model="formData.firstname" required ng-minlength=3 late-Validate/>
+                    <input type="text" name="firstname" ng-model="formData.firstname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                     <span  ng-show="editclientform.firstname.$invalid">
+                      <small class="error" ng-show="editclientform.firstname.$error.pattern">alphanumeric and spaces only!</small>
                       <small class="error" ng-show="editclientform.firstname.$error.req">
                           Required Field
                       </small>
@@ -90,8 +91,9 @@
                 <div class="control-group">
                   <label class="control-label">{{ 'label.lastname' | translate }}<span class="required">*</span></label>
                   <div class="controls">
-                    <input type="text" name="lastname" ng-model="formData.lastname" required ng-minlength=3 late-Validate/>
+                    <input type="text" name="lastname" ng-model="formData.lastname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                     <span  ng-show="editclientform.lastname.$invalid">
+                      <small class="error" ng-show="editclientform.lastname.$error.pattern">alphanumeric and spaces only!</small>
                       <small class="error" ng-show="editclientform.lastname.$error.req">
                           Required Field
                       </small>
@@ -149,4 +151,3 @@
           
         </fieldset>
       </form>
-
